--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
