--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
+    "esbuild": "^0.23.0",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7"
   },
