--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
-  }
+  },
+  "version": "0.0.0"
 }
