--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "app",
-  "private": "true",
   "dependencies": {
-    "autoprefixer": "^10.4.19",
+    "@hotwired/turbo-rails": "^8.0.5",
+    "autoprefixer": "^10.4.20",
+    "controllers": "^0.0.2",
     "daisyui": "^4.12.10",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7"
+    "esbuild": "^0.23.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   },
   "scripts": {
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
-  }
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --platform=node"
+  },
+  "version": "0.0.0",
+  "packageManager": "yarn@4.4.0"
 }
