--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "dependencies": {
     "@hotwired/turbo-rails": "^8.0.5",
+    "@rails/actiontext": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "controllers": "^0.0.2",
     "daisyui": "^4.12.10",
@@ -9,12 +10,13 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "trix": "^2.1.8"
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --platform=node"
   },
   "version": "0.0.0",
-  "packageManager": "yarn@4.4.0"
+  "packageManager": "yarn@4.5.1"
 }
